Opened 14 years ago

Closed 14 years ago

#5061 closed bug (fixed)

MediaPlayer does not remember its playlist on app quit

Reported by: axeld Owned by: stippi
Priority: normal Milestone: R1
Component: Applications/MediaPlayer Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Only when closed via the window. Looking at MainWin::QuitRequested(), it's clear that this is caused by a message that is sent to the BApplication that it will not process anymore.

Change History (2)

comment:1 by axeld, 14 years ago

Owner: changed from marcusoverhagen to stippi

comment:2 by stippi, 14 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev35253.

Note: See TracTickets for help on using tickets.