 * Refactored storing the playlist archive in the quit message.  * Added looping all windows on quit and store the current playlist if    applicable.

Fixes #5061.


git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35253 a95241bf-73f2-0310-859d-f6bbb57e9c96